Algumas mudanças no CSS da página sobremim.html

--- a/contato.html
+++ b/contato.html
@@ -60,7 +60,7 @@
  
   <section>
 <div class="footer">
-  <p id="footerp">TODOS DIREITOS NICHOLAS GERADE 2021 - BRASIL</p>
+  <p id="footerp">TODOS DIREITOS RESERVADOS | NICHOLAS GERADE 2021 | BRASIL, São Paulo</p>
 </div>
 </section>
 <br>
