--- a/index.html
+++ b/index.html
@@ -117,11 +117,13 @@
 
 <section>
 <div class="footer">
-  <p id="footerp">TODOS DIREITOS NICHOLAS GERADE 2021 - BRASIL</p>
+  <p id="footerp">TODOS DIREITOS RESERVADOS | NICHOLAS GERADE 2021 | BRASIL, São Paulo</p>
 </div>
 </section>
 
 <br><br>
 <br>
+<br>
+
 </body>
 </html>
